--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,8 @@
         {% block javascripts %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div class="container mx-auto py-8">
+            {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
