--- a/templates/recruitement/index.html.twig
+++ b/templates/recruitement/index.html.twig
@@ -1,9 +1,18 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <style>
+        .required:after {
+            content:" *";
+            color: red;
+        }
+    </style>
+{% endblock %}
+
 {% block body %}
     <div class="flex items-center flex-col">
         <img src="{{ asset('/images/logo.png') }}" class="w-40 pb-6">
-
         <div>
             {% for label, messages in app.flashes(['success', 'warning']) %}
                 {% for message in messages %}
@@ -13,7 +22,6 @@
                 {% endfor %}
             {% endfor %}
         </div>
-        
         <div>
             {{ form_start(form) }}
                 <div class="flex flex-col">
@@ -25,10 +33,6 @@
                                 {{ form_widget(form.candidateType, {'attr': {'class': 'bg-white rounded border border-dark-600 p-3 mb-2'}}) }}
                             </div>
                             <div class="flex flex-col">
-                                {{ form_label(form.postType, 'Type de poste') }}
-                                {{ form_widget(form.postType, {'attr': {'class': 'bg-white rounded border border-dark-600 p-2 mb-2'}}) }}
-                            </div>
-                            <div class="flex flex-col">
                                 {{ form_label(form.agencies, 'Agence souhaitée') }}
                                 {{ form_widget(form.agencies, {'attr': {'class': 'bg-white rounded border border-dark-600 p-3 mb-2'}}) }}
                             </div>
@@ -38,7 +42,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div>
                         <span class="font-bold text-xl">Informations sur vous</span>
                         <div class="grid grid-cols-2 gap-4 border rounded p-4 mb-8 bg-gray-100">
@@ -76,7 +79,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div>
                         <span class="font-bold text-xl">Un petit plus</span>
                         <div class="grid grid-cols-1 gap-4 border rounded p-4 mb-4 bg-gray-100">
@@ -88,7 +90,7 @@
                     </div>
                 </div>
                 <div>
-                    {{ form_widget(form.save, {'attr': {'class': 'bg-gray-900 text-white rounded border border-dark-600 p-2 w-full mt-2'}}) }}
+                    {{ form_widget(form.save, {'attr': {'class': 'bg-gray-900 text-white rounded border border-dark-600 p-2 w-full mt-2 hover:bg-gray-800'}}) }}
                 </div>
             {{ form_end(form) }}
         </div>
