--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,11 @@
     </head>
     <body>
         <div class="container mx-auto py-8">
+            <div class="flex items-center flex-col">
+                <a href="{{ path('home') }}">
+                    <img src="{{ asset('/images/logo.png') }}" class="w-40 pb-6">
+                </a>
+            </div>
             {% block body %}{% endblock %}
         </div>
     </body>
