--- a/templates/offer/index.html.twig
+++ b/templates/offer/index.html.twig
@@ -11,4 +11,7 @@
 
 {% block body %}
     {% include '@web_dir/uploads/offers/' ~ offer.file %}
+    <a href="{{ path('recruitement') }}" class="bg-gray-900 text-white rounded border border-dark-600 p-2 hover:bg-gray-800 w-full text-center mt-8 no-underline" type="submit">
+        Postuler
+    </a>
 {% endblock %}    
